feat: added administrator dashboard